agregue un hola gente

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
         <h1> HOLA MUNDO GIT</h1>
         <h2> este es mi </h2>
         <h3> este es mi </h3>
+        <p> HOLA gemte</p>
     </body>
 </html>
